# shakti-seva-studio

./: .gitignore  AGENTS.md  CITATION.cff  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  netlify.toml  package-lock.json  package.json  pyproject.toml
.github/workflows/: validate.yml
demo/: README.md  bonsai-review.md  generate_narration.py  narration.txt  package-lock.json  package.json  tsconfig.json
demo/src/: root.tsx  video.tsx
docs/: applied-rag-information-architecture.md  architecture.md  bonsai-review.md  data-treatment.md  day-0.md  engineering-talk.md  evaluation.md  five-borough-eval.md  hermes-validation.md  how-we-built-this.md  local-ai-extension.md  netlify-deployment.md  public-reference.md  tracing.md  validation-report.md
evals/: README.md  capture_tui.py  fake_hermes.sh  five_borough.py  live_address_variants.py  netlify_acceptance.mjs  run.py  site_shell.mjs  staged_ui.mjs
evals/baseline/: address-input-variants.json  day0.json  deployment-profile.json  five-borough.json  live-address.json  netlify-production.json
fixtures/: synthetic-case.json
netlify/functions/: address-suggestions.mjs  case.mjs  health.mjs
netlify/tests/: civic-data.integration.test.mjs  civic-data.unit.test.mjs
scripts/: bootstrap.py  build_netlify.mjs
src/shaki_seva/: __init__.py  cli.py  data.py  hermes.py  server.py
src/shakti_seva/: __init__.py  cli.py  data.py  (+3 more)
static/: app.js  guidance.css  guidance.html  index.html  learn.css  learn.html  shell.css  styles.css
tests/: test_cli.py  test_data.py  test_hermes.py  test_server.py  test_trace.py
(+1 files in other folders)
